--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.jpg);
+    background-image: url(background.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -339,7 +339,7 @@ form .btn2{
 /*---------------------css for small screen---------*/
 @media only screen and (max-width:100px){
     #header{
-        background-image: url(images\phonebackground.jpg);
+        background-image: url(phonebackground.jpg);
     }
 }
 #msg{
